syntax = "proto3";

package proto;

service EltonService {
	rpc GenerateObjectInfo(ObjectInfo) returns (stream ObjectInfo) {};
	rpc CommitObjectInfo(ObjectInfo) returns (EmptyMessage) {};
	rpc GetObject(ObjectInfo) returns (stream Object) {};
	rpc PutObject(Object) returns (EmptyMessage) {};
	rpc DeleteObject(ObjectInfo) returns (EmptyMessage) {};
}

message ObjectInfo {
	string object_id = 1;
	uint64 version = 2;
	string delegate = 3;
	string request_hostname = 4;
}

message Object {
	string object_id = 1;
	uint64 version = 2;
	string body = 3;
}

message EmptyMessage {
}
